* Fixed footer logo from being too close to the list. * Changed logo to grayscale for evaluation purposes.

--- a/dcc-portal-ui/src/main/js/app/styles/styles.scss
+++ b/dcc-portal-ui/src/main/js/app/styles/styles.scss
@@ -233,7 +233,7 @@ h1.ui-scrollfix, .sug-wrap.ui-scrollfix {
 
 h1.sticky-scrollfix {
   border-bottom: 1px solid $greyLightest;
-  padding-bottom: 0.43em;
+  padding-bottom: 0.5rem;
 }
 
 aside.ui-scrollfix {
